--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,11 +31,6 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-requests = "^2.31.0"
-pydantic = "^2.5.3"
-fastapi = "^0.109.0"
-polars = "^0.20.6"
-uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
@@ -44,6 +39,15 @@ numpy = "^1.26.3"
 scikit-learn = "^1.4.0"
 pandas = "^2.2.0"
 matplotlib = "^3.8.2"
+polars = "^0.20.7"
+
+[tool.poetry.group.api.dependencies]
+requests = "^2.31.0"
+pydantic = "^2.6.1"
+fastapi = "^0.109.2"
+uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
+psycopg2-binary = "^2.9.9"
+types-psycopg2 = "^2.9.21.20240201"
 
 [build-system]
 requires = ["poetry-core"]
