--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,8 @@ fastapi = "^0.109.2"
 uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
 psycopg2-binary = "^2.9.9"
 types-psycopg2 = "^2.9.21.20240201"
+sqlalchemy = "^2.0.25"
+sqlmodel = "^0.0.14"
 
 [build-system]
 requires = ["poetry-core"]
