added photos volume

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.11
 
-WORKDIR /code
+WORKDIR /api
 
-COPY requirements.txt /code/requirements.txt
+COPY requirements.txt /api/requirements.txt
 
-RUN pip install --no-cache-dir -r /code/requirements.txt
+RUN pip install --no-cache-dir -r /api/requirements.txt
 
-COPY ./api.py /code/
+COPY ./api.py /api/
 
 CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8000"]
