--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ networks:
   my_network:
     driver: bridge
 
+volumes:
+  photos:
+
 
 services:
   db:
@@ -20,6 +23,8 @@ services:
       - db
     build: ./api
     image: api-image
+    volumes:
+      - photos:/api/photos
     networks:
       - my_network
     ports:
